--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             background-color: #111827; /* gray-900 */
         }
         .hero-bg {
-            background-image: radial-gradient(circle at 1px 1px, #4b5563, #111827);
+            background-image: radial-gradient(circle at 1px 1px, #374151, #111827); /* Slightly lighter dots */
             background-size: 1.5rem 1.5rem;
             position: absolute;
             top: 0; left: 0; right: 0; bottom: 0;
@@ -26,6 +26,14 @@
         @keyframes fade-in-anim {
             from { opacity: 0; transform: translateY(10px); }
             to { opacity: 1; transform: translateY(0); }
+        }
+        /* Refined button and link styles */
+        .btn-primary {
+            transition: all 0.2s ease-out;
+        }
+        .btn-primary:active {
+            transform: scale(0.98);
+            opacity: 0.9;
         }
     </style>
 </head>
@@ -41,9 +49,9 @@
                 </svg>
                 <span class="text-2xl font-bold">NotesApp</span>
             </div>
-            <nav class="flex items-center space-x-4">
-                <a href="login.html" class="text-gray-300 hover:text-white transition-colors">Sign In</a>
-                <a href="get-started.html" class="bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 px-4 rounded-lg transition-colors">Get Started</a>
+            <nav class="flex items-center space-x-6">
+                <a href="login.html" class="text-gray-300 hover:text-white transition-colors duration-200">Sign In</a>
+                <a href="get-started.html" class="btn-primary bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 px-5 rounded-lg">Get Started</a>
             </nav>
         </header>
 
@@ -57,74 +65,7 @@
                     The simplest, most secure way for your team to capture ideas, manage notes, and stay productive. Built for collaboration, designed for focus.
                 </p>
                 <div class="fade-in" style="animation-delay: 0.6s;">
-                    <a href="get-started.html" class="bg-white text-gray-900 font-bold py-3 px-8 rounded-full text-lg hover:bg-gray-200 transition-transform transform hover:scale-105 duration-300">
-                        Start for Free
-                    </a>
-                </div>
-            </div>
-        </main>
-    </div>
-</body>
-</html><!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NotesApp - Your Ideas, Organized.</title>
-    <script src="[https://cdn.tailwindcss.com](https://cdn.tailwindcss.com)"></script>
-    <link rel="preconnect" href="[https://rsms.me/](https://rsms.me/)">
-    <link rel="stylesheet" href="[https://rsms.me/inter/inter.css](https://rsms.me/inter/inter.css)">
-    <style>
-        body {
-            font-family: 'Inter', sans-serif;
-            background-color: #111827; /* gray-900 */
-        }
-        .hero-bg {
-            background-image: radial-gradient(circle at 1px 1px, #4b5563, #111827);
-            background-size: 1.5rem 1.5rem;
-            position: absolute;
-            top: 0; left: 0; right: 0; bottom: 0;
-            z-index: -1;
-        }
-        .fade-in {
-            animation: fade-in-anim 1s ease-out forwards;
-            opacity: 0;
-        }
-        @keyframes fade-in-anim {
-            from { opacity: 0; transform: translateY(10px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-    </style>
-</head>
-<body class="text-white">
-    <div class="hero-bg"></div>
-
-    <div class="min-h-screen flex flex-col">
-        <!-- Header -->
-        <header class="p-6 flex justify-between items-center">
-            <div class="flex items-center">
-                <svg class="h-8 w-8 text-blue-400 mr-2" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                    <path d="M3 7l6 6-6 6M21 7l-6 6 6 6"></path>
-                </svg>
-                <span class="text-2xl font-bold">NotesApp</span>
-            </div>
-            <nav class="flex items-center space-x-4">
-                <a href="login.html" class="text-gray-300 hover:text-white transition-colors">Sign In</a>
-                <a href="get-started.html" class="bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 px-4 rounded-lg transition-colors">Get Started</a>
-            </nav>
-        </header>
-
-        <!-- Main Content -->
-        <main class="flex-grow flex items-center justify-center text-center p-6">
-            <div class="max-w-3xl">
-                <h1 class="text-5xl md:text-7xl font-extrabold leading-tight mb-6 fade-in" style="animation-delay: 0.2s;">
-                    <span class="text-transparent bg-clip-text bg-gradient-to-r from-blue-400 to-teal-300">Organize Your Brilliance.</span>
-                </h1>
-                <p class="text-lg md:text-xl text-gray-300 mb-10 max-w-2xl mx-auto fade-in" style="animation-delay: 0.4s;">
-                    The simplest, most secure way for your team to capture ideas, manage notes, and stay productive. Built for collaboration, designed for focus.
-                </p>
-                <div class="fade-in" style="animation-delay: 0.6s;">
-                    <a href="get-started.html" class="bg-white text-gray-900 font-bold py-3 px-8 rounded-full text-lg hover:bg-gray-200 transition-transform transform hover:scale-105 duration-300">
+                    <a href="get-started.html" class="btn-primary inline-block bg-white text-gray-900 font-bold py-3 px-8 rounded-full text-lg hover:bg-gray-200">
                         Start for Free
                     </a>
                 </div>
